# find-python-packages

./: README.md  package.json  setup.cfg  setup.py
scripts/: find-python-packages
tests/shell-cache/examples/: example.sh
