# https://pypi.org/project/setupcfg-generator/
[metadata]
name = find-python-packages
version = 2019.5.17
url = https://github.com/andrewp-as-is/find-python-packages
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python packages

[options]
install_requires = 
	setuptools
scripts = 
	scripts/find-python-packages
